# frzn-docs

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13ec2aeb883a_create_repos_files_code_chunks_tables.py  4219645c3a36_add_error_to_indexstatus_enum.py  5f1f2e9350c0_add_on_delete_cascade_on_file_codechunk_.py  8e5e54930572_update_embedding_vector_size.py  f89598ca91e2_add_index_status_enum_to_repo.py
backend/app/: db.py  main.py  models.py
backend/app/agents/: agent.py
backend/app/api/routers/: chat.py  health.py  repos.py
backend/app/core/: config.py
backend/app/schemas/: repo.py
backend/app/scripts/: indexer.py
backend/app/utils/: index_rules.py
frontend/: package.json
frontend/components/: RepoSlashCard.tsx  RepoSlashInput.tsx
frontend/components/assistant-ui/: thread.tsx
frontend/pages/: _document.tsx  index.tsx
frontend/pages/api/chat/: index.ts
frontend/pages/api/repos/: [id].ts  index.ts
frontend/pages/repos/[id]/: chat.tsx
